--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/users
+spring.datasource.url=jdbc:mysql://localhost:3307/users
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=12345
 server.port=8088
 
-#????????? Hibernate
+# Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-#????? ???????? ?????? PUT, PATCH, DELETE
+# Enable PUT, PATCH, DELETE methods
 spring.mvc.hiddenmethod.filter.enabled=true
