--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/users
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/users
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=root
 server.port=8088
 
 # Hibernate
